--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,6 @@ body {
 }
 
 .navbar {
-  background-color: #e3e3e3;
 }
 
 h2 {
@@ -43,6 +42,10 @@ a:link {
 
 .article-image {
   margin: auto;
+}
+
+.article-feed {
+  margin-top: 20px;
 }
 
 .article-listitem {
