--- a/css/main.css
+++ b/css/main.css
@@ -1,87 +1,97 @@
 body {
-  -webkit-font-smoothing: antialiased;
-  font-family: sans-serif;
-  background-color: #ffffff;
+    -webkit-font-smoothing: antialiased;
+    font-family: sans-serif;
+    background-color: #ffffff;
 }
-
-.navbar {
-}
-
 h2 {
-  font-family: "Helvetica", sans-serif;
-  font-size: 28px;
-  font-weight: 600;
+    font-family: "Helvetica", sans-serif;
+    font-size: 28px;
+    font-weight: 600;
 }
-
 h3 {
-  margin-top: 56px;
-  font-family: "Lucida Grande",Arial,sans-serif;
-  font-weight: 700;
-  font-style: normal;
-  font-size: 36px;
+    margin-top: 56px;
+    font-family: "Lucida Grande", Arial, sans-serif;
+    font-weight: 700;
+    font-style: normal;
+    font-size: 36px;
 }
-
 a:link {
-  text-decoration: none;
-  color: black;
+    text-decoration: none;
+    color: black;
 }
 
-.content-layout p {
-  margin-top: 30px;
-  font-size: 21px;
-  font-family: Georgia, serif;
-  font-weight: 400;
-  line-height: 1.58;
-  letter-spacing: -.003em;
+.navbar-default {
+  border: none;
 }
 
 .content-layout {
-  width: 700px;
-  margin: 0 auto;
+    width: 700px;
+    margin: 0 auto;
+}
+
+.content-layout p {
+    margin-top: 30px;
+    font-size: 21px;
+    font-family: Georgia, serif;
+    font-weight: 400;
+    line-height: 1.58;
+    letter-spacing: -.003em;
 }
 
 .article-image {
-  margin: auto;
+    margin: auto;
 }
-
 .article-feed {
-  margin-top: 20px;
+    margin-top: 20px;
 }
-
 .article-listitem {
-  padding: 15px;
-  margin-bottom: 20px;
+    padding: 15px;
+    margin-bottom: 20px;
 }
-
 .article-listitem-author {
-  color: rgba(0,0,0,.5);
+    color: rgba(0, 0, 0, .5);
 }
-
 .article-listitem-panel {
-  margin-top: 20px;
+    margin-top: 20px;
 }
-
 .article-listitem-views {
-  color: rgba(0,0,0, .5);
+    color: rgba(0, 0, 0, .5);
 }
-
 .button-love {
-  display: inline-block;
-  position: relative;
-  padding: 0;
-  background: rgba(0, 0, 0, 0);
-  margin-right: 4px;
-  border: none;
-  outline: none;
+    display: inline-block;
+    position: relative;
+    padding: 0;
+    background: rgba(0, 0, 0, 0);
+    margin-right: 4px;
+    border: none;
+    outline: none;
+}
+.button-love-text {
+    color: rgba(0, 0, 0, .3);
+    display: inline-block;
+    position: relative;
+    background: rgba(0, 0, 0, 0);
+    border: none;
+    outline: none;
+    pointer-events: none;
+    padding: 0;
 }
 
-.button-love-text {
-  color: rgba(0,0,0,.3);
-  display: inline-block;
-  position: relative;
-  background: rgba(0, 0, 0, 0);
+.user-pic {
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  border: 0.5px solid;
+  border-color: rgba(0, 0, 0, 0.2);
+}
+
+.user-button {
+  background-color: #ffffff;
   border: none;
   outline: none;
-  pointer-events: none;
-  padding: 0;
+  margin-right: 20px;
+}
+
+.user-menu {
+  margin-right: 60px;
 }
