--- a/views/article.html
+++ b/views/article.html
@@ -1,11 +1,12 @@
 <div class="article">
 
-  <md-content>
-  <h3 class="article-title">{{ detail.title }}</h3>
-  <img ng-src="{{ detail.url }}" class="md-card-image">
-</md-content>
+  <md-card>
+   <img ng-src="{{detail.url}}" class="md-card-image">
+ </md-card>
 
   <md-content class="content-layout">
+
+    <h3 class="article-title">{{ detail.title }}</h3>
 
 <p>Over fact all son tell this any his. No insisted confined of weddings to returned to debating rendered. Keeps order fully so do party means young. Table nay him jokes quick. In felicity up to graceful mistaken horrible consider. Abode never think to at. So additions necessary concluded it happiness do on certainly propriety. On in green taken do offer witty of.</p>
 
