--- a/views/article.html
+++ b/views/article.html
@@ -30,6 +30,15 @@
 
 <p>Ever man are put down his very. And marry may table him avoid. Hard sell it were into it upon. He forbade affixed parties of assured to me windows. Happiness him nor she disposing provision. Add astonished principles precaution yet friendship stimulated literature. State thing might stand one his plate. Offending or extremity therefore so difficult he on provision. Tended depart turned not are.</p>
 
+<!-- Comment section -->
+  <h4>Responses</h4>
+  <div class="well">
 
   </div>
+
+  </div>
+
+
+
+
 </div>
