--- a/css/main.css
+++ b/css/main.css
@@ -15,20 +15,20 @@ h3 {
     font-style: normal;
     font-size: 36px;
 }
+a {
+    color: #4CAF50;
+}
 a:link {
     text-decoration: none;
     color: black;
 }
-
 .navbar-default {
-  border: none;
+    border: none;
 }
-
 .content-layout {
     width: 700px;
     margin: 0 auto;
 }
-
 .content-layout p {
     margin-top: 30px;
     font-size: 21px;
@@ -37,7 +37,6 @@ a:link {
     line-height: 1.58;
     letter-spacing: -.003em;
 }
-
 .article-image {
     margin: auto;
 }
@@ -45,22 +44,30 @@ a:link {
     margin-top: 20px;
 }
 .article-listitem {
-    padding: 15px;
+    padding: 18px;
     margin-bottom: 20px;
 }
 .article-listitem-author {
+    margin: 0;
+}
+.article-listitem-pubdate {
     color: rgba(0, 0, 0, .5);
+    font-size: 12px;
+}
+.article-listitem-content {
+    color: black;
+    text-decoration: none;
+    margin-top: 20px;
+    font-size: 17px;
+    font-family: Georgia, serif;
+    font-weight: 400;
+    line-height: 1.58;
+    letter-spacing: -.003em;
 }
 
-.article-listitem-content {
-  color: black;
-  text-decoration: none;
-  margin-top: 20px;
-}
 .article-listitem-panel {
     margin-top: 20px;
 }
-
 .article-listitem-views {
     color: rgba(0, 0, 0, .5);
 }
@@ -83,22 +90,25 @@ a:link {
     pointer-events: none;
     padding: 0;
 }
-
 .user-pic {
-  width: 35px;
-  height: 35px;
-  border-radius: 50%;
-  border: 0.5px solid;
-  border-color: rgba(0, 0, 0, 0.2);
+    width: 35px;
+    height: 35px;
+    border-radius: 50%;
+    border: 0.5px solid;
+    border-color: rgba(0, 0, 0, 0.2);
 }
-
 .user-button {
-  background-color: #ffffff;
-  border: none;
-  outline: none;
-  margin-right: 20px;
+    background-color: #ffffff;
+    border: none;
+    outline: none;
+    margin-right: 20px;
 }
-
 .user-menu {
-  margin-right: 60px;
+    margin-right: 60px;
+}
+.fa-heart-o {
+    color: #4CAF50;
+}
+.fa-heart {
+    color: #4CAF50;
 }
