--- a/views/home.html
+++ b/views/home.html
@@ -1,31 +1,38 @@
 <div class="main">
-  <div class="container">
-  <ul class="nav nav-tabs col-md-8 col-sm-8">
-    <li><a href="#/">Trending</a></li>
-    <li><a href="#/">Recommend for you</a></li>
-    <li><a href="#/">Tags</a></li>
-  </ul>
-</div>
-<a href="#/new">New</a>
-<a href="#/register">Register</a>
+    <div class="container">
+        <ul class="nav nav-tabs col-md-8 col-sm-8">
+            <li><a href="#/">Trending</a></li>
+            <li><a href="#/">Recommend for you</a></li>
+            <li><a href="#/">Tags</a></li>
+        </ul>
+    </div>
+    <a href="#/new">New</a>
+    <a href="#/register">Register</a>
     <div class="container article-feed" ng-repeat="article in articles" ng-init="$last ? NProgress.end() : angular.noop()">
         <div class="article-listitem panel panel-default col-md-8 col-sm-8">
             <!-- SHOW ARTICLE PUBLISHED DATE/TIME -->
-            <h4 class="article-listitem-author">{{ article.author }}</h4>
-            <h5>{{ article.pubdate | date : 'MMM d'}}</h5>
-            <a href="#/articles/{{$index}}">
-                <div ng-style="{'background-image':'url({{article.url}})'}"
-                style="height: 200px">
+            <div class="row">
+                <div class="col-md-1">
+                    <img class="user-pic" ng-src="http://7108-presscdn-0-78.pagely.netdna-cdn.com/wp-content/uploads/2013/09/person-to-person-business.jpg">
                 </div>
+                <div class="col-md-11">
+                    <div class="row">
+                        <a class="article-listitem-author" href="#/">{{ article.author }}</a>
+                        <p class="article-listitem-pubdate">{{ article.pubdate | date : 'MMM d'}}</p>
+                    </div>
+                </div>
+            </div>
 
+            <a href="#/articles/{{$index}}">
+              <div ng-style="{'background-image':'url({{article.url}})'}" style="height: 200px"></div>
                 <h2 class="article-listitem-title">{{ article.title }}</h2>
-                <p class="article-listitem-content">Over fact all son tell this any his. No insisted confined of weddings to returned to debating rendered. Keeps order fully so do party means young. Table nay him jokes quick. In felicity up to graceful mistaken horrible consider. Abode never think to at. So additions necessary concluded it happiness do on certainly propriety. On in green taken do offer witty of.</p>
+                <p class="article-listitem-content">Over fact all son tell this any his. No insisted confined of weddings to returned to debating rendered. </p>
             </a>
             <div class="row article-listitem-panel">
                 <div class="col-md-10">
                     <button class="button-love">
-                        <!-- <i class="fa fa-heart-o fa-lg" aria-hidden="true"></i> -->
-                        <i class="fa fa-heart fa-lg" aria-hidden="true"></i>
+                        <i class="fa fa-heart-o fa-lg" aria-hidden="true"></i>
+                        <!-- <i class="fa fa-heart fa-lg" aria-hidden="true"></i> -->
                     </button>
                     <button class="button-love-text">{{ article.upvotes }}</button>
                 </div>
