--- a/css/main.css
+++ b/css/main.css
@@ -15,9 +15,15 @@ h3 {
     font-style: normal;
     font-size: 36px;
 }
+
 a {
     color: #4CAF50;
 }
+
+a:hover {
+  color: #00C853;
+}
+
 a:link {
     text-decoration: none;
     color: black;
@@ -111,4 +117,20 @@ a:link {
 }
 .fa-heart {
     color: #4CAF50;
+}
+
+.author-info {
+  width: 700px;
+  margin: 0 auto;
+}
+
+.comment-section {
+  width: 700px;
+  margin: 0 auto;
+  margin-top: 50px;
+}
+
+.comment-item {
+  padding: 15px;
+  margin-top: 20px;
 }
