--- a/views/home.html
+++ b/views/home.html
@@ -6,16 +6,15 @@
             <li><a href="#/">Tags</a></li>
         </ul>
     </div>
-    <a href="#/new">New</a>
-    <a href="#/register">Register</a>
+
     <div class="container article-feed" ng-repeat="article in articles" ng-init="$last ? NProgress.end() : angular.noop()">
         <div class="article-listitem panel panel-default col-md-8 col-sm-8">
             <!-- SHOW ARTICLE PUBLISHED DATE/TIME -->
             <div class="row">
-                <div class="col-md-1">
-                    <img class="user-pic" ng-src="http://7108-presscdn-0-78.pagely.netdna-cdn.com/wp-content/uploads/2013/09/person-to-person-business.jpg">
+                <div class="col-xs-2 col-sm-2 col-md-1">
+                    <img class="user-pic" ng-src="{{ article.url }}">
                 </div>
-                <div class="col-md-11">
+                <div class="col-xs-10 col-sm-10 col-md-11">
                     <div class="row">
                         <a class="article-listitem-author" href="#/">{{ article.author }}</a>
                         <p class="article-listitem-pubdate">{{ article.pubdate | date : 'MMM d'}}</p>
