Add headroom.js header library

--- a/views/home.html
+++ b/views/home.html
@@ -1,6 +1,6 @@
 <div class="main">
     <div class="container">
-        <ul class="nav nav-tabs col-md-8 col-sm-8">
+        <ul class="nav nav-pills col-md-8 col-sm-8">
             <li><a href="#/">Trending</a></li>
             <li><a href="#/">Recommend for you</a></li>
             <li><a href="#/">Tags</a></li>
