--- a/views/new.html
+++ b/views/new.html
@@ -1,5 +1,6 @@
 <div class="container">
-  <form method="post" ng-controller="TinyMceController">
-    <textarea ui-tinymce="tinymceOptions" ng-model="tinymceModel"></textarea>
+  <form method="post">
+
+     <button class="btn btn-success">Submit</button>
   </form>
 </div>
