--- a/css/main.css
+++ b/css/main.css
@@ -28,12 +28,43 @@ a:link {
     text-decoration: none;
     color: black;
 }
+
 .navbar-default {
     border: none;
+    padding-top: 10px;
+}
+
+.main {
+  margin-top: 100px;
+}
+
+.article {
+  margin-top: 100px;
 }
 .content-layout {
     width: 700px;
     margin: 0 auto;
+}
+
+/*.header--fixed {
+    position: fixed;
+    z-index: 10;
+    right: 0;
+    left: 0;
+    top: 0;
+}*/
+
+.headroom {
+  transition: transform .25s ease-in-out;
+  will-change: transform
+}
+
+.headroom--unpinned {
+  transform: translateY(-100%)
+}
+
+.headroom--pinned {
+  transform: translateY(0)
 }
 .content-layout p {
     margin-top: 30px;
