Modify page to get data from API and show article content via ng-bind-html

--- a/views/article.html
+++ b/views/article.html
@@ -22,7 +22,11 @@
 
         <h3 class="article-title">{{ detail.title }}</h3>
 
-        <p>Over fact all son tell this any his. No insisted confined of weddings to returned to debating rendered. Keeps order fully so do party means young. Table nay him jokes quick. In felicity up to graceful mistaken horrible consider. Abode never think
+        <div class="article-content" ng-bind-html="content">
+
+        </div>
+
+        <!-- <p>Over fact all son tell this any his. No insisted confined of weddings to returned to debating rendered. Keeps order fully so do party means young. Table nay him jokes quick. In felicity up to graceful mistaken horrible consider. Abode never think
             to at. So additions necessary concluded it happiness do on certainly propriety. On in green taken do offer witty of.</p>
 
         <p>Months on ye at by esteem desire warmth former. Sure that that way gave any fond now. His boy middleton sir nor engrossed affection excellent. Dissimilar compliment cultivated preference eat sufficient may. Well next door soon we mr he four. Assistance
@@ -52,7 +56,7 @@
             dried maids on he of linen in.</p>
 
         <p>Ever man are put down his very. And marry may table him avoid. Hard sell it were into it upon. He forbade affixed parties of assured to me windows. Happiness him nor she disposing provision. Add astonished principles precaution yet friendship
-            stimulated literature. State thing might stand one his plate. Offending or extremity therefore so difficult he on provision. Tended depart turned not are.</p>
+            stimulated literature. State thing might stand one his plate. Offending or extremity therefore so difficult he on provision. Tended depart turned not are.</p> -->
 
         <!-- Comment section -->
 
