--- a/css/style.css
+++ b/css/style.css
@@ -19,9 +19,11 @@ body {
 
 a {
   text-decoration: none;
-  color: #1ab188;
+  color: #E91E63;
   -webkit-transition: .5s ease;
   transition: .5s ease;
+    
+    
 }
 a:hover {
   color: #179b77;
@@ -30,28 +32,30 @@ a:hover {
 .form {
   background: rgba(19, 35, 47, 0.9);
   padding: 40px;
-  max-width: 600px;
+  max-width: 550px;
   margin: 40px auto;
   border-radius: 4px;
-  box-shadow: 0 4px 10px 4px rgba(19, 35, 47, 0.3);
+  box-shadow: 0 4px 10px 4px rgba(19, 35, 47, 0.5);
 }
 
 .tab-group {
   list-style: none;
   padding: 0;
   margin: 0 0 40px 0;
+  
 }
 .tab-group:after {
   content: "";
   display: table;
   clear: both;
+    
 }
 .tab-group li a {
   display: block;
   text-decoration: none;
   padding: 15px;
   background: rgba(160, 179, 176, 0.25);
-  color: #a0b3b0;
+  color: #a0b3b0 ;
   font-size: 20px;
   float: left;
   width: 50%;
@@ -61,11 +65,11 @@ a:hover {
   transition: .5s ease;
 }
 .tab-group li a:hover {
-  background: #179b77;
+  background: #00BFA5;
   color: #ffffff;
 }
 .tab-group .active a {
-  background: #1ab188;
+  background: #00796B;
   color: #ffffff;
 }
 
@@ -77,7 +81,7 @@ h1#title {
 	font-family: 'Lato', sans-serif;
 	font-weight: 300;
 	font-size: 3.2em;
-	color: white;
+	color: #CFD8DC;
 	text-shadow: 0 0 10px rgba(0,0,0,0.8);
 	margin: 0 auto;
 	padding-top: 60px;
@@ -89,7 +93,7 @@ h1#title {
 
 h1 {
   text-align: center;
-  color: #ffffff;
+  color: #CFD8DC;
   font-weight: 300;
   margin: 0 0 40px;
 }
@@ -108,7 +112,7 @@ label {
 }
 label .req {
   margin: 2px;
-  color: #1ab188;
+  color: #E91E63;
 }
 
 label.active {
@@ -177,14 +181,14 @@ textarea {
   font-weight: 600;
   text-transform: uppercase;
   letter-spacing: .1em;
-  background: #1ab188;
+  background: #00796B;
   color: #ffffff;
   -webkit-transition: all 0.5s ease;
   transition: all 0.5s ease;
   -webkit-appearance: none;
 }
 .button:hover, .button:focus {
-  background: #179b77;
+  background: #00BFA5;
 }
 
 .button-block {
@@ -194,5 +198,5 @@ textarea {
 
 .forgot {
   margin-top: -20px;
-  text-align: right;
+  text-align: left;
 }
