--- a/views/new.html
+++ b/views/new.html
@@ -1,6 +1,6 @@
-<div class="container">
-  <form method="post">
-
-     <button class="btn btn-success">Submit</button>
+<div class="new-article-section container">
+  <form action="" method="post">
+    <textarea ng-wig="text1" class="editor"></textarea>
+     <button id="submit" class="btn btn-success" onClick="console.log("CLicked")">Submit</button>
   </form>
 </div>
