--- a/css/main.css
+++ b/css/main.css
@@ -15,31 +15,25 @@ h3 {
     font-style: normal;
     font-size: 36px;
 }
-
 a {
     color: #4CAF50;
 }
-
 a:hover {
-  color: #00C853;
+    color: #00C853;
 }
-
 a:link {
     text-decoration: none;
     color: black;
 }
-
 .navbar-default {
     border: none;
     padding-top: 10px;
 }
-
 .main {
-  margin-top: 100px;
+    margin-top: 100px;
 }
-
 .article {
-  margin-top: 100px;
+    margin-top: 100px;
 }
 .content-layout {
     width: 700px;
@@ -55,16 +49,14 @@ a:link {
 }*/
 
 .headroom {
-  transition: transform .25s ease-in-out;
-  will-change: transform
+    transition: transform .25s ease-in-out;
+    will-change: transform
 }
-
 .headroom--unpinned {
-  transform: translateY(-100%)
+    transform: translateY(-100%)
 }
-
 .headroom--pinned {
-  transform: translateY(0)
+    transform: translateY(0)
 }
 .content-layout p {
     margin-top: 30px;
@@ -101,7 +93,6 @@ a:link {
     line-height: 1.58;
     letter-spacing: -.003em;
 }
-
 .article-listitem-panel {
     margin-top: 20px;
 }
@@ -149,19 +140,19 @@ a:link {
 .fa-heart {
     color: #4CAF50;
 }
-
 .author-info {
-  width: 700px;
-  margin: 0 auto;
+    width: 700px;
+    margin: 0 auto;
 }
-
 .comment-section {
-  width: 700px;
-  margin: 0 auto;
-  margin-top: 50px;
+    width: 700px;
+    margin: 0 auto;
+    margin-top: 50px;
 }
-
 .comment-item {
-  padding: 15px;
-  margin-top: 20px;
+    padding: 15px;
+    margin-top: 20px;
+}
+.new-article-section {
+    margin-top: 100px;
 }
