--- a/views/article.html
+++ b/views/article.html
@@ -3,7 +3,7 @@
     <div class="author-info">
       <div class="row">
           <div class="col-xs-2 col-sm-2 col-md-1">
-              <img class="user-pic" ng-src="{{ detail.url }}">
+              <img class="user-pic" ng-src="{{ detail.img }}">
           </div>
           <div class="col-xs-10 col-sm-10 col-md-11">
               <div class="row">
@@ -22,9 +22,7 @@
 
         <h3 class="article-title">{{ detail.title }}</h3>
 
-        <div class="article-content" ng-bind-html="content">
-
-        </div>
+        <div class="article-content" ng-bind-html="content"></div>
 
         <!-- <p>Over fact all son tell this any his. No insisted confined of weddings to returned to debating rendered. Keeps order fully so do party means young. Table nay him jokes quick. In felicity up to graceful mistaken horrible consider. Abode never think
             to at. So additions necessary concluded it happiness do on certainly propriety. On in green taken do offer witty of.</p>
