--- a/views/article.html
+++ b/views/article.html
@@ -3,7 +3,7 @@
     <div class="author-info">
       <div class="row">
           <div class="col-xs-2 col-sm-2 col-md-1">
-              <img class="user-pic" ng-src="{{ detail.img }}">
+              <img class="user-pic" ng-src="{{ userImage }}">
           </div>
           <div class="col-xs-10 col-sm-10 col-md-11">
               <div class="row">
