Move add article button to user menu

--- a/views/new.html
+++ b/views/new.html
@@ -1,7 +1,9 @@
 <div class="new-article-section content-layout">
-  <form action="" >
-    <button class="post-btn" ng-click="show()">POST</button>
+  <form action="chinnnoo.xyz:8889/api/article/uid/1000000000">
+
+
       <h3><input id="title-input" type="text" placeholder="Your title here"></input></h3>
+      <button class="post-btn" ng-click="show()">POST</button>
 
      <div ui-tinymce="tinymceOptions" ng-model="content"></div>
 
