--- a/views/home.html
+++ b/views/home.html
@@ -1,11 +1,11 @@
 <div class="main">
-    <div class="container">
+    <!-- <div class="container">
         <ul class="nav nav-pills col-md-8 col-sm-8">
             <li><a href="#/">Trending</a></li>
             <li><a href="#/">Recommend for you</a></li>
             <li><a href="#/">Tags</a></li>
         </ul>
-    </div>
+    </div> -->
 
     <div class="container article-feed" ng-repeat="article in articles">
         <div class="article-listitem panel panel-default col-md-8 col-sm-8">
