--- a/views/new.html
+++ b/views/new.html
@@ -1,11 +1,8 @@
 <div class="new-article-section content-layout">
-  <form action="chinnnoo.xyz:8889/api/article/uid/1000000000">
-
-
-      <h3><input id="title-input" type="text" placeholder="Your title here"></input></h3>
+  <form action="chinnnoo.xyz:8889/api/article/uid/1000000000" method="post">
       <button class="post-btn" ng-click="show()">POST</button>
-
-     <div ui-tinymce="tinymceOptions" ng-model="content"></div>
-
+      <h3><input id="title-input" name="title" type="text" placeholder="Your title here"></input></h3>
+     <div data-placeholder="Begin with your story here" ui-tinymce="tinymceOptions" ng-model="content"></div>
+     <input class="hide" name="content"></input>
   </form>
 </div>
