Add post method on EditorController

--- a/views/article.html
+++ b/views/article.html
@@ -8,7 +8,7 @@
           <div class="col-xs-10 col-sm-10 col-md-11">
               <div class="row">
                   <a class="article-listitem-author" href="#/">{{ detail.author }}</a>
-                  <p class="article-listitem-pubdate">{{ detail.pubdate | date : 'MMM d'}}</p>
+                  <p class="article-listitem-pubdate">{{ detail.createTime | relativeDate }}</p>
               </div>
           </div>
       </div>
