--- a/css/main.css
+++ b/css/main.css
@@ -150,12 +150,13 @@ a:link {
 
 .post-btn {
   font-size: 16px;
-  background: transparent;
-  color: #4CAF50;
-  border: none;
+  background: #4CAF50;
+  color: #FFFFFF;
   padding: 5px;
-  float: right;
   outline: none;
+  width: 60%;
+  border: 1px solid #4CAF50;
+  margin: auto;
 }
 
 .post-btn:hover {
