--- a/views/login.html
+++ b/views/login.html
@@ -63,7 +63,7 @@
                     <input type="password" name="cpassword" required autocomplete="off" />
                 </div>
 
-                <button type="submit" class="button button-block" />Get Started</button>
+                <button type="submit" class="button button-block">Get Started</button>
 
             </form>
 
@@ -89,7 +89,7 @@
                 </div>
 
 
-                <button class="button button-block" />Sign In</button>
+                <button class="button button-block">Sign In</button>
 
             </form>
 
